--- a/drivers/amplifier/pair/start.html
+++ b/drivers/amplifier/pair/start.html
@@ -22,6 +22,8 @@ function saveSettings () {
 	// variables
 	var inputIPAddress = document.getElementById( 'ipAddress' ).value;
 	var inputDeviceName = document.getElementById( 'deviceName' ).value;
+	var inputZone2 = document.getElementById( 'Zone2' ).value;
+	var inputZone3 = document.getElementById( 'Zone3' ).value;
 
 	// If required values are filled in
 	// TODO: should check if this is a real IPv4 address
@@ -31,7 +33,9 @@ function saveSettings () {
 		// Build data array
 		var data = {
 			ipaddress: inputIPAddress,
-			deviceName: inputDeviceName
+			deviceName: inputDeviceName,
+			zone2: inputZone2,
+			zone3: inputZone3
 		};
 		// Continue to back-end, pass along data
 		Homey.emit( 'get_devices', data );
@@ -71,6 +75,14 @@ function saveSettings () {
 			<tr>
 				<td style="width:100px;" data-i18n="pair.start.deviceName">Name</td>
 				<td><input id="deviceName" type="text" value="Marantz AVR" placeholder=""/></td>
+			</tr>
+			<tr>
+				<td style="width:100px;" data-i18n="pair.start.zone2">Name</td>
+				<td><input id="Zone2" type="checkbox" value="Zone 2" placeholder="" checked /></td>
+			</tr>
+			<tr>
+				<td style="width:100px;" data-i18n="pair.start.zone3">Name</td>
+				<td><input id="Zone3" type="checkbox" value="Zone 3" placeholder="" /></td>
 			</tr>
 		</table>
 
