Working zones for onoff
Separate zones, switching on and off via card now works.

--- a/drivers/amplifier/pair/start.html
+++ b/drivers/amplifier/pair/start.html
@@ -78,11 +78,11 @@ function saveSettings () {
 			</tr>
 			<tr>
 				<td style="width:100px;" data-i18n="pair.start.zone2">Name</td>
-				<td><input id="Zone2" type="checkbox" value="Zone 2" placeholder="" checked /></td>
+				<td><input id="Zone2" type="checkbox" value="add Zone 2" placeholder="" checked /></td>
 			</tr>
 			<tr>
 				<td style="width:100px;" data-i18n="pair.start.zone3">Name</td>
-				<td><input id="Zone3" type="checkbox" value="Zone 3" placeholder="" /></td>
+				<td><input id="Zone3" type="checkbox" value="add Zone 3" placeholder="" /></td>
 			</tr>
 		</table>
 
