more work in progress
WIP… got a problem where action card always uses last added device, not
the device that was dragged to the then… part of the flow editor.

--- a/drivers/DMamplifier/pair/start.html
+++ b/drivers/DMamplifier/pair/start.html
@@ -22,8 +22,8 @@ function saveSettings () {
 	// variables
 	var inputIPAddress = document.getElementById( 'ipAddress' ).value;
 	var inputDeviceName = document.getElementById( 'deviceName' ).value;
-	var inputZone2 = document.getElementById( 'Zone2' ).value;
-	var inputZone3 = document.getElementById( 'Zone3' ).value;
+	var inputZone2 = document.getElementById( 'Zone2' ).checked;
+	var inputZone3 = document.getElementById( 'Zone3' ).checked;
 
 	// If required values are filled in
 	// TODO: should check if this is a real IPv4 address
